# aincrad-save-editor

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: error.rs  layout.rs  lib.rs  manifest.rs  order.rs  plan.rs
crates/host/: Cargo.toml
crates/host/src/: config.rs  deploy.rs  detect.rs  inject.rs  launch.rs  lib.rs  library.rs  nxm.rs  paths.rs  profiles.rs  ue4ss.rs
crates/host/tests/: deploy_integration.rs
crates/keyscan/: Cargo.toml
crates/keyscan/src/: lib.rs  platform.rs
crates/keyscan/tests/: live.rs  validate.rs
crates/save/: Cargo.toml
crates/save-editor/: Cargo.toml
crates/save-editor/src/: i18n.rs  locate.rs  main.rs  npchair.rs  thumbs.rs  update.rs  voice_preview.rs
crates/save/examples/: dump_tree.rs  get_appearance.rs  get_equipment.rs  scan_items.rs  set_part.rs
crates/save/src/: appearance.rs  crypto.rs  hygiene.rs  lib.rs  mode.rs  palette.rs  preset.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs  theme.rs
docs/: index.html
scripts/: extract-palettes.py  extract-voices.py  nexus-upload.sh  package.sh  zip-readme.txt
