[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/host",
    "crates/ui",
    "crates/save",
    "crates/keyscan",
    "crates/save-editor",
]

[workspace.package]
edition = "2021"
version = "0.1.18"
license = "MIT"
authors = ["junkie"]
repository = "https://github.com/Deaththegrim/aincrad-save-editor"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
tempfile = "3"
eframe = "0.34"
egui = "0.34"
rfd = "0.15"
image = { version = "0.25", default-features = false, features = ["png"] }
# Voice preview: plays the bundled ogg clips of the creator's voice sample lines.
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-ogg", "symphonia-vorbis"] }

# Save decrypt/parse + key recovery
uesave = "0.7"
aes = "0.8"
ecb = "0.1"
hex = "0.4"
sysinfo = "0.32"

# Internal crates
aml-core = { path = "crates/core" }
aml-host = { path = "crates/host" }
aml-save = { path = "crates/save" }
aml-ui = { path = "crates/ui" }
aml-keyscan = { path = "crates/keyscan" }

[profile.release]
lto = true
codegen-units = 1
