[package]
name = "aml-host"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
aml-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
