[package]
name = "aml-keyscan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
aes.workspace = true
hex.workspace = true
sysinfo.workspace = true

# Windows: read another process's memory via the Win32 API.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Foundation",
] }
