[package]
name = "aml-save-editor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "aml-save-editor"
path = "src/main.rs"

[dependencies]
aml-save = { workspace = true }
aml-host = { workspace = true }
aml-ui = { workspace = true }
aml-keyscan = { workspace = true }
eframe.workspace = true
egui.workspace = true
rfd.workspace = true
image = { workspace = true }
