[package]
name = "aml-save"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
uesave.workspace = true
aes.workspace = true
ecb.workspace = true
hex.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
